Fix overflowing column

--- a/src/frontend/Workspace/index.scss
+++ b/src/frontend/Workspace/index.scss
@@ -168,6 +168,8 @@
                 font-weight: bold;
                 font-size: 12px;
                 background-color: #eee;
+                text-overflow: ellipsis;
+                overflow: hidden;
               }
             }
           }
